# skillinfer

./: .gitignore  LICENSE  README.md  TODOS.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
bayeskal/: __init__.py  _covariance.py  state.py  taxonomy.py  validation.py
docs/: index.md
docs/api/: analysis.md  datasets.md  inference-state.md  population.md  profile.md  taxonomy.md  validation.md  visualization.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/how-it-works/: computational-cost.md  covariance-estimation.md  kalman-update.md
docs/stylesheets/: extra.css
docs/tutorials/: european-skills.md  human-skills.md  llm-benchmarks.md  orchestration.md  piaac.md  student-assessment.md
examples/: esco.py  llm_benchmark.py  onet.py  orchestration.py  quickstart.py  task_matching.py
mcp-server/: README.md  pyproject.toml
mcp-server/skillinfer_mcp/: __init__.py  __main__.py  server.py
scripts/: prepare_piaac_prior.py
skillinfer/: __init__.py  _gmm.py  _kalman.py  analysis.py  population.py  state.py  taxonomy.py  types.py  validation.py  visualization.py
skillinfer/datasets/: __init__.py  _esco.py  _onet.py  _piaac.py  esco.parquet  onet.parquet  piaac_prior.npz
tests/: test_datasets.py  test_integration.py  test_kalman.py  test_match.py  test_state.py  test_taxonomy.py  test_validation.py
tests/e2e/: run.sh  test_mcp_pypi.py  test_skillinfer_pypi.py
