[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillinfer"
version = "0.1.0"
description = "Infer a full skill profile from a few observations. Few-shot capability estimation for AI agents and humans."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kostadin Devedzhiev" },
]
keywords = [
    "skill-inference",
    "capability-estimation",
    "ai-agents",
    "bayesian-inference",
    "kalman-filter",
    "human-ai-orchestration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
dev = [
    "matplotlib>=3.7",
    "pytest>=7.0",
]
docs = [
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[project.urls]
Repository = "https://github.com/kostadindev/skillinfer"

[tool.hatch.build.targets.wheel]
packages = ["skillinfer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
