[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillinfer"
version = "0.1.1"
description = "Infer a full skill profile from a few observations. Few-shot capability estimation for AI agents and humans."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kostadin Devedzhiev", email = "kgd26@cam.ac.uk" },
]
keywords = [
    "skill-inference",
    "capability-estimation",
    "ai-agents",
    "bayesian-inference",
    "kalman-filter",
    "human-ai-orchestration",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.2",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
dev = [
    "matplotlib>=3.7",
    "pytest>=7.0",
]
docs = [
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]

[project.urls]
Homepage = "https://github.com/kostadindev/skillinfer"
Documentation = "https://kostadindev.github.io/skillinfer"
Repository = "https://github.com/kostadindev/skillinfer"
Issues = "https://github.com/kostadindev/skillinfer/issues"

[tool.hatch.build.targets.wheel]
packages = ["skillinfer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
