[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skillinfer-mcp"
version = "0.1.0"
description = "MCP server for skillinfer — Bayesian skill inference for AI agents and humans"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kostadin Devedzhiev" },
]
keywords = ["mcp", "skill-inference", "bayesian", "kalman", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "skillinfer>=0.1.0",
    "mcp>=1.0.0",
]

[project.scripts]
skillinfer-mcp = "skillinfer_mcp.server:main"
